@@ -9,6 +9,7 @@
 
 	* more candles:
 	  - lighting shop in orcus town
+	  - Gnomes get candles (more likely in dark mines) (from AceHack)
 
 	* patches:
 	  - DYWYPISI? (by Jafet)
